--- a/assets/views/fragments/ranking-tn.jet.html
+++ b/assets/views/fragments/ranking-tn.jet.html
@@ -1,8 +1,12 @@
 {{- range . }}
 {{- target := CookieList["pixivfe-ThumbnailToNewTab"] }}
-  <div class="card h-100">
+<div class="col">
+  <div class="card h-100 border-0">
     {{- include "thumbnail-dt" }}
+    <div class="card-body py-2 px-0">
       {{- include "thumbnail-tt" }}
       {{- include "thumbnail-at" }}
+    </div>
   </div>
+</div>
 {{- end }}
