--- a/assets/views/rank.jet.html
+++ b/assets/views/rank.jet.html
@@ -2,83 +2,73 @@
 {{- import "blocks/switcher" }}
 {{- import "blocks/pagination" }}
 {{- block body() }}
+<div class="row justify-content-center">
+  <h1 class="h3 fw-bold text-center mb-4">{{ .Title }}</h1>
 
-<div class="container">
-  <h1>{{ .Title }}</h1>
-
-
-  <div class="switcher">
-    {{- Mode := isset(Queries.mode) ? Queries.mode : "daily" }}
-    {{- Content := isset(Queries.content) ? Queries.content : "all" }}
-
-    {{- url := "" }}
-    {{- if Mode == "original" || Mode == "male" || Mode == "female" || Mode == ""}}
-    {{ url = "/ranking?date=" + .Data.CurrentDate +
-    "&page=1&content=" }}
-    {{- else }}
-    {{- url = "/ranking?mode=" + Mode + "&date=" + .Data.CurrentDate + "&page=1&content=" }}
-    {{- end }}
-    <div class="switch-title">Content</div>
-    {{- path := slice("all", "illust", "manga", "ugoira") }}
-    {{- name := slice("Overall", "Illustrations", "Mangas", "Ugoira")}}
-    {{- yield Switcher(baseURL=url, paths=path, names=name, currentPath=Content)}}
-  </div>
-  <br />
-
-  <div class="switcher">
-    {{ url := "/ranking?content=" + Content +"&date=" + .Data.CurrentDate
-    + "&page=1&mode=" }}
-    <div class="switch-title">Modes</div>
-
-    {{- path := slice("daily", "weekly") }}
-    {{- name := slice("Daily", "Weekly")}}
-    {{- yield Switcher(baseURL=url, paths=path, names=name, currentPath=Mode)}}
-
-    {{- if Content != "ugoira" }}
-
-    {{- path := slice("monthly", "rookie") }}
-    {{- name := slice("Monthly", "Rookie")}}
-    {{- yield Switcher(baseURL=url, paths=path, names=name, currentPath=Mode)}}
-
-    {{- end }}
-
-    <span class="switch-seperator"></span>
-    {{- path := slice("daily_r18", "weekly_r18") }}
-    {{- name := slice("Daily (R-18)", "Weekly (R-18)")}}
-    {{- yield Switcher(baseURL=url, paths=path, names=name, currentPath=Mode)}}
-    <br />
-    {{- if Content == "all" }}
-    {{- path := slice("original", "male", "female") }}
-    {{- name := slice("Original", "Popular among males", "Popular among females")}}
-    {{- yield Switcher(baseURL=url, paths=path, names=name, currentPath=Mode)}}
-    {{- end }}
-  </div>
-  <br />
-
-  <div class="switcher">
-    {{ url := "/ranking?content=" + Content + "&mode=" + Mode +
-    "&page=1" }}
-    <div class="switch-title">Date (current: {{ .Data.CurrentDate }})</div>
-    {{- if .Data.PrevDate != "false" }}
-    <a href="{{ url }}&date={{.Data.PrevDate}}" class="switch-button">Yesterday</a>
-    {{- end }} {{ if .Data.NextDate != "false" }}
-    <a href="{{ url }}&date={{.Data.NextDate}}" class="switch-button">Next day</a>
-    {{- end }}
-    <a href="{{ url }}" class="switch-button">Latest</a>
-    <span class="switch-seperator"></span>
-    <a href="/rankingCalendar">Ranking calendar</a>
-  </div>
-  <br />
-
-  <div class="artwork-container">
-    {{- include "fragments/ranking-tn" .Data.Contents }}
+  <div class="col-12 col-lg-6">
+    <div class="card border-0 rounded-5 bg-body-tertiary p-4 mb-4">
+      <h2 class="h4 fw-bold mb-3">Content</h2>
+      {{- Mode := isset(Queries.mode) ? Queries.mode : "daily" }}
+      {{- Content := isset(Queries.content) ? Queries.content : "all" }} {{- url := "" }}
+      {{- if Mode == "original" || Mode == "male" || Mode == "female" || Mode == ""}}
+        {{ url = "/ranking?date=" + .Data.CurrentDate + "&page=1&content=" }}
+        {{- else }}
+        {{- url = "/ranking?mode=" + Mode + "&date=" + .Data.CurrentDate + "&page=1&content=" }}
+      {{- end }}
+      {{- path := slice("all", "illust", "manga", "ugoira") }} {{- name := slice("Overall", "Illustrations", "Mangas", "Ugoira")}}
+      <div class="d-flex flex-wrap">{{- yield Switcher(baseURL=url, paths=path, names=name, currentPath=Content)}}</div>
+    </div>
   </div>
 
+  <div class="col-12 col-lg-6">
+    <div class="card border-0 rounded-5 bg-body-tertiary p-4 mb-4">
+      <h2 class="h4 fw-bold mb-3">Modes</h2>
+      {{ url := "/ranking?content=" + Content +"&date=" + .Data.CurrentDate + "&page=1&mode=" }}
+      <div class="d-flex flex-wrap mb-3">
+        {{- path := slice("daily", "weekly") }}
+        {{- name := slice("Daily", "Weekly")}} {{- yield Switcher(baseURL=url, paths=path, names=name, currentPath=Mode)}} {{- if Content != "ugoira" }}
+          {{- path := slice("monthly", "rookie") }}
+          {{- name := slice("Monthly", "Rookie")}}
+          {{- yield Switcher(baseURL=url, paths=path, names=name, currentPath=Mode)}}
+        {{- end }}
+      </div>
 
-    {{- url := "/ranking?content=" + Content +"&date=" + .Data.CurrentDate
-    + "&mode=" + Mode + "&page=" }}
-    {{- paginationData := createPaginator(url, "#checkpoint", .Page, -1, 1, 5) }}
-    {{- yield pagination(data=paginationData) }}
+      <div class="d-flex flex-wrap mb-3">
+        {{- path := slice("daily_r18", "weekly_r18") }}
+        {{- name := slice("Daily (R-18)", "Weekly (R-18)")}}
+        {{- yield Switcher(baseURL=url, paths=path, names=name, currentPath=Mode)}}
+      </div>
 
+      {{- if Content == "all" }}
+      <div class="d-flex flex-wrap">
+        {{- path := slice("original", "male", "female") }}
+        {{- name := slice("Original", "Popular among males", "Popular among females")}}
+        {{- yield Switcher(baseURL=url, paths=path, names=name, currentPath=Mode)}}</div>
+      {{- end }}
+    </div>
+
+    <div class="card border-0 rounded-5 bg-body-tertiary p-4 mb-4">
+      <h2 class="h4 fw-bold mb-3">Date (current: {{ .Data.CurrentDate }})</h2>
+      {{ url := "/ranking?content=" + Content + "&mode=" + Mode + "&page=1" }}
+      <div class="d-flex flex-wrap">
+        {{- if .Data.PrevDate != "false" }}
+        <a href="{{ url }}&date={{.Data.PrevDate}}" class="btn btn-secondary fw-bold rounded-pill me-2 mb-2">Yesterday</a>
+        {{- end }} {{ if .Data.NextDate != "false" }}
+        <a href="{{ url }}&date={{.Data.NextDate}}" class="btn btn-secondary fw-bold rounded-pill me-2 mb-2">Next day</a>
+        {{- end }}
+        <a href="{{ url }}" class="btn btn-secondary fw-bold rounded-pill me-2 mb-2">Latest</a>
+        <a href="/rankingCalendar" class="btn btn-secondary fw-bold rounded-pill mb-2">Ranking calendar</a>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="col-12">
+    <div class="row row-cols-2 row-cols-md-4 row-cols-lg-6 g-4 mb-4">{{- include "fragments/ranking-tn" .Data.Contents }}</div>
+  </div>
+
+  {{- url := "/ranking?content=" + Content +"&date=" + .Data.CurrentDate + "&mode=" + Mode + "&page=" }}
+  {{- paginationData := createPaginator(url, "#checkpoint", .Page, -1, 1, 5) }}
+  {{- yield pagination(data=paginationData) }}
 </div>
 {{- end }}
