--- a/assets/views/rank.jet.html
+++ b/assets/views/rank.jet.html
@@ -15,8 +15,9 @@
         {{- else }}
         {{- url = "/ranking?mode=" + Mode + "&date=" + .Data.CurrentDate + "&page=1&content=" }}
       {{- end }}
-      {{- path := slice("all", "illust", "manga", "ugoira") }} {{- name := slice("Overall", "Illustrations", "Mangas", "Ugoira")}}
-      <div class="d-flex flex-wrap">{{- yield Switcher(baseURL=url, paths=path, names=name, currentPath=Content)}}</div>
+      {{- path := slice("all", "illust", "manga", "ugoira") }}
+      {{- name := slice("Overall", "Illustrations", "Mangas", "Ugoira")}}
+      <div class="d-flex flex-wrap">{{- yield Switcher(baseURL=url, paths=path, names=name, activeState=Content)}}</div>
     </div>
   </div>
 
@@ -26,24 +27,24 @@
       {{ url := "/ranking?content=" + Content +"&date=" + .Data.CurrentDate + "&page=1&mode=" }}
       <div class="d-flex flex-wrap mb-3">
         {{- path := slice("daily", "weekly") }}
-        {{- name := slice("Daily", "Weekly")}} {{- yield Switcher(baseURL=url, paths=path, names=name, currentPath=Mode)}} {{- if Content != "ugoira" }}
+        {{- name := slice("Daily", "Weekly")}} {{- yield Switcher(baseURL=url, paths=path, names=name, activeState=Mode)}} {{- if Content != "ugoira" }}
           {{- path := slice("monthly", "rookie") }}
           {{- name := slice("Monthly", "Rookie")}}
-          {{- yield Switcher(baseURL=url, paths=path, names=name, currentPath=Mode)}}
+          {{- yield Switcher(baseURL=url, paths=path, names=name, activeState=Mode)}}
         {{- end }}
       </div>
 
       <div class="d-flex flex-wrap mb-3">
         {{- path := slice("daily_r18", "weekly_r18") }}
         {{- name := slice("Daily (R-18)", "Weekly (R-18)")}}
-        {{- yield Switcher(baseURL=url, paths=path, names=name, currentPath=Mode)}}
+        {{- yield Switcher(baseURL=url, paths=path, names=name, activeState=Mode)}}
       </div>
 
       {{- if Content == "all" }}
       <div class="d-flex flex-wrap">
         {{- path := slice("original", "male", "female") }}
         {{- name := slice("Original", "Popular among males", "Popular among females")}}
-        {{- yield Switcher(baseURL=url, paths=path, names=name, currentPath=Mode)}}</div>
+        {{- yield Switcher(baseURL=url, paths=path, names=name, activeState=Mode)}}</div>
       {{- end }}
     </div>
 
@@ -53,7 +54,8 @@
       <div class="d-flex flex-wrap">
         {{- if .Data.PrevDate != "false" }}
         <a href="{{ url }}&date={{.Data.PrevDate}}" class="btn btn-secondary fw-bold rounded-pill me-2 mb-2">Yesterday</a>
-        {{- end }} {{ if .Data.NextDate != "false" }}
+        {{- end }}
+        {{ if .Data.NextDate != "false" }}
         <a href="{{ url }}&date={{.Data.NextDate}}" class="btn btn-secondary fw-bold rounded-pill me-2 mb-2">Next day</a>
         {{- end }}
         <a href="{{ url }}" class="btn btn-secondary fw-bold rounded-pill me-2 mb-2">Latest</a>
