--- a/assets/views/rank.jet.html
+++ b/assets/views/rank.jet.html
@@ -16,9 +16,17 @@
         {{- else }}
         {{- url = "/ranking?mode=" + Mode + "&date=" + .Data.CurrentDate + "&page=1&content=" }}
       {{- end }}
-      {{- path := slice("all", "illust", "manga", "ugoira") }}
-      {{- name := slice("Overall", "Illustrations", "Mangas", "Ugoira")}}
-      <div class="d-flex flex-wrap">{{- yield Switcher(baseURL=url, paths=path, names=name, activeState=Content)}}</div>
+      <!-- TODO: align the names of the "Overall" and "Manga" buttons vertically -->
+      <div class="d-flex flex-wrap mb-2">
+        {{- path := slice("all") }}
+        {{- name := slice("Overall")}}
+        {{- yield Switcher(baseURL=url, paths=path, names=name, activeState=Content)}}
+      </div>
+      <div class="d-flex flex-wrap">
+        {{- path := slice("illust", "manga", "ugoira") }}
+        {{- name := slice("Illustrations", "Manga", "Ugoira")}}
+        {{- yield Switcher(baseURL=url, paths=path, names=name, activeState=Content)}}
+      </div>
     </div>
   </div>
 
@@ -74,6 +82,7 @@
     <div class="row row-cols-2 row-cols-md-4 row-cols-lg-6 g-4 mb-4">{{- include "fragments/ranking-tn" .Data.Contents }}</div>
   </div>
 
+  <!-- Pagination -->
   {{- url := "/ranking?content=" + Content +"&date=" + .Data.CurrentDate + "&mode=" + Mode + "&page=" }}
   {{- paginationData := createPaginator(url, "#checkpoint", .Page, -1, 1, 5) }}
   {{- yield pagination(data=paginationData) }}
