--- a/assets/views/rank.jet.html
+++ b/assets/views/rank.jet.html
@@ -27,7 +27,9 @@
               {{- url = "/ranking?mode=" + Mode + "&date=" + .Data.CurrentDate + "&page=1&content=" }}
             {{- end }}
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-12">
+                 <div class="row">
+                <div class="col-12 col-md-6">
                 <h3 class="h5 fw-bold mb-3">General rankings</h3>
                 <div class="btn-group d-flex flex-wrap" role="group" aria-label="Content types">
                   {{- path := slice("all") }}
@@ -41,6 +43,8 @@
                 </div>
                 <p class="small text-muted mb-3">Select the type of content you want to see in the rankings.</p>
 
+                </div>
+                <div class="col-12 col-md-6">
                 {{- if Content == "all" }}
                 <h3 class="h5 fw-bold mb-3">Specialized rankings</h3>
                 <div class="btn-group d-flex flex-wrap" role="group" aria-label="Specialized ranking modes">
@@ -52,6 +56,9 @@
                 <p class="small text-muted mb-0">Specialized ranking categories.</p>
                 {{- end }}
               </div>
+              </div>
+              </div>
+            </div>
 
               <div class="col-md-6">
                 <h3 class="h5 fw-bold mb-3">Time frame</h3>
