add rows to ranking

--- a/assets/views/rank.jet.html
+++ b/assets/views/rank.jet.html
@@ -26,7 +26,7 @@
             {{- else }}
               {{- url = "/ranking?mode=" + Mode + "&date=" + .Data.CurrentDate + "&page=1&content=" }}
             {{- end }}
-            <div class="row">
+            <div class="row border-bottom border-2 mb-3">
               <div class="col-12">
                  <div class="row">
                 <div class="col-12 col-md-6">
@@ -53,13 +53,16 @@
                   {{- name := slice("Original", "Popular among males", "Popular among females")}}
                   {{- yield Switcher(baseURL=specUrl, paths=path, names=name, activeState=Mode)}}
                 </div>
-                <p class="small text-muted mb-0">Specialized ranking categories.</p>
+                <p class="small text-muted mb-3">Specialized ranking categories.</p>
                 {{- end }}
               </div>
               </div>
               </div>
             </div>
 
+          <div class="row">
+            <div class="col-12">
+              <div class="row">
               <div class="col-md-6">
                 <h3 class="h5 fw-bold mb-3">Time frame</h3>
                 {{ url := "/ranking?content=" + Content +"&date=" + .Data.CurrentDate + "&page=1&mode=" }}
@@ -77,7 +80,10 @@
                 {{- end }}
                 <p class="small text-muted">Choose the time frame for the rankings.</p>
 
-                <h3 class="h5 fw-bold mb-3">R-18 rankings</h3>
+              </div>
+              <div class="col-md-6">
+
+                <h3 class="h5 fw-bold mb-3">Time frame (R-18)</h3>
                 <div class="btn-group d-flex flex-wrap" role="group" aria-label="R-18 ranking modes">
                   {{- path := slice("daily_r18", "weekly_r18") }}
                   {{- name := slice("Daily (R-18)", "Weekly (R-18)")}}
@@ -87,6 +93,8 @@
 
               </div>
             </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -94,26 +102,28 @@
       <div class="col-12 col-lg-3">
         <div class="card-body rounded-5 bg-body-tertiary p-4 mb-4">
           <h2 class="h4 fw-bold mb-3">Reset modes</h2>
-          <p class="text-muted">You can reset all currently applied ranking modes and filters.</p>
-          <a href="/ranking" type="button" class="btn btn-danger fw-bold rounded-pill">Reset modes</a>
+          <p class="small text-muted">You can reset all currently applied ranking modes and filters.</p>
+          <div class="d-flex flex-wrap">
+            <a href="/ranking" type="button" class="btn btn-danger flex-fill fw-bold rounded-pill">Reset modes</a>
+          </div>
         </div>
 
         <div class="card border-0 rounded-5 bg-body-tertiary p-4 mb-4">
           <h2 class="h4 fw-bold mb-3">Date ({{ .Data.CurrentDate }})</h2>
-          <p class="text-muted">Navigate through different dates or view the latest rankings.</p>
+          <p class="small text-muted">Navigate through different dates or view the latest rankings.</p>
           {{ url := "/ranking?content=" + Content + "&mode=" + Mode + "&page=1" }}
           <div class="d-flex flex-wrap mb-2">
-            <a href="{{ url }}" class="btn btn-secondary fw-bold rounded-pill flex-fill py-2 me-3 mb-2 d-flex align-items-center justify-content-center">
+            <a href="{{ url }}" class="btn btn-secondary fw-bold rounded-pill flex-fill mb-2 d-flex align-items-center justify-content-center">
               <span>Latest</span>
             </a>
           </div>
           <div class="d-flex flex-wrap">
             {{- if .Data.PrevDate != "false" }}
-            <a href="{{ url }}&date={{.Data.PrevDate}}" class="btn btn-secondary fw-bold rounded-pill flex-fill py-2 me-3 mb-2 d-flex align-items-center justify-content-center">
+            <a href="{{ url }}&date={{.Data.PrevDate}}" class="btn btn-secondary fw-bold rounded-pill flex-fill me-3 d-flex align-items-center justify-content-center">
               <span>Previous day</span>
             </a>
             {{- end }}
-            <a href="{{ url }}&date={{.Data.NextDate}}" class="btn btn-secondary fw-bold rounded-pill flex-fill py-2 me-3 mb-2 d-flex align-items-center justify-content-center{{ .Data.NextDate == "false" ? " disabled" : "" }}"{{ .Data.NextDate == "false" ? " aria-disabled=\"true\"" : "" }}>
+            <a href="{{ url }}&date={{.Data.NextDate}}" class="btn btn-secondary fw-bold rounded-pill flex-fill d-flex align-items-center justify-content-center{{ .Data.NextDate == "false" ? " disabled" : "" }}"{{ .Data.NextDate == "false" ? " aria-disabled=\"true\"" : "" }}>
               <span>Next day</span>
             </a>
           </div>
