--- a/assets/views/rankingCalendar.jet.html
+++ b/assets/views/rankingCalendar.jet.html
@@ -73,7 +73,9 @@
             <div class="card-body rounded-5 bg-body-tertiary p-4 mb-4">
               <h2 class="h4 fw-bold mb-3">Reset modes</h2>
               <p class="small text-muted">You can reset all currently applied ranking modes and use the default one.</p>
-              <a href="/rankingCalendar" type="button" class="btn btn-danger fw-bold rounded-pill">Reset modes</a>
+              <div class="d-flex flex-wrap">
+                <a href="/rankingCalendar" type="button" class="btn btn-danger flex-fill fw-bold rounded-pill">Reset modes</a>
+              </div>
             </div>
           </div>
           <div class="card border-0">
